This is a big commit

--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=2176f20d9968b877f28c79bc3c6d558c
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL=mysql://root:Bakchlamo@123456@127.0.0.1:3306/Banque?serverVersion=5.7.41-log
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
